Import of STEFFENW/Locale-Maketext-TieHash-L10N-0.04 from CPAN.
gitpan-cpan-distribution: Locale-Maketext-TieHash-L10N
gitpan-cpan-version:      0.04
gitpan-cpan-path:         STEFFENW/Locale-Maketext-TieHash-L10N-0.04.tar.gz
gitpan-cpan-author:       STEFFENW
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -7,3 +7,10 @@ Revision history for Perl extension Locale::Maketext::TieHash::L10N.
 0.02  Sun Jan  9 21:45:01 2005
 	- only pod-documentation is expanded
 
+0.04  Sat Feb 12 19:48:00 2005
+	- new Method Config
+        - Methods deprecated
+          - STORE
+          - Keys
+          - Values
+          - Get
