Import of STEFFENW/Locale-Maketext-TieHash-L10N-0.05 from CPAN.
gitpan-cpan-distribution: Locale-Maketext-TieHash-L10N
gitpan-cpan-version:      0.05
gitpan-cpan-path:         STEFFENW/Locale-Maketext-TieHash-L10N-0.05.tar.gz
gitpan-cpan-author:       STEFFENW
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -14,3 +14,7 @@ Revision history for Perl extension Locale::Maketext::TieHash::L10N.
           - Keys
           - Values
           - Get
+
+0.05  Sun Feb 13 14:10:00 2005
+	- only pod-documentation is expanded
+
