--- a/Changes
+++ b/Changes
@@ -20,3 +20,8 @@ Revision history for Perl extension Locale::Maketext::TieHash::L10N.
 
 0.06  Sat Jan 26 18:00:00 2008
     - Build.pl
+
+0.07  Tue Feb 12 00:30:00 2008
+    - Repair 04_cover_only.t translation error
+      because the error message of Locale::Maketext
+      for translation not found is no longer "how to say, it's q{}.
