Import of STEFFENW/Locale-Maketext-TieHash-L10N-0.11 from CPAN.
gitpan-cpan-distribution: Locale-Maketext-TieHash-L10N
gitpan-cpan-version:      0.11
gitpan-cpan-path:         STEFFENW/Locale-Maketext-TieHash-L10N-0.11.tar.gz
gitpan-cpan-author:       STEFFENW
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Locale::Maketext::TieHash::L10N.
 
+0.11  Sat May 30 09:00:00 2009
+- bugfix build dependencies
+
 0.10  Thu May 21 18:00:00 2009
 - Perl critic
 
