Import of STEFFENW/Locale-Maketext-TieHash-L10N-0.12 from CPAN.
gitpan-cpan-distribution: Locale-Maketext-TieHash-L10N
gitpan-cpan-version:      0.12
gitpan-cpan-path:         STEFFENW/Locale-Maketext-TieHash-L10N-0.12.tar.gz
gitpan-cpan-author:       STEFFENW
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Locale::Maketext::TieHash::L10N.
 
+0.12  Sat Jun 06 07:00:00 2009
+- bugfix warning at %L10N::en::Lexicon" used only once
+
 0.11  Sat May 30 09:00:00 2009
 - bugfix build dependencies
 
